Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/machine_learning.css
+++ b/mcidashboard/mcidashboard-front/src/css/machine_learning.css
@@ -1,8 +1,9 @@
 .machine-learning-container {
     display: grid;
-    gap: 20px;
+    gap: 50px;
     grid-template-columns: 1.5fr 1fr;
     grid-template-rows: auto auto;
+    justify-items: center;
     padding: 20px;
 }
 
@@ -24,7 +25,6 @@
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     align-self: start;
-    /* width: 96%; */
 }
 
 @media only screen and (max-width: 1528px) {
@@ -39,9 +39,9 @@
     grid-row: 1 / 3;
     /* Spans 1st and 2nd row */
     margin-left: 20px;
-    margin-right: 50px;
+    margin-right: 20px; 
     align-self: start;
-    width: 74%;
+    width: 90%;
 }
 
 
