--- a/mcidashboard/mcidashboard-front/src/css/overview.css
+++ b/mcidashboard/mcidashboard-front/src/css/overview.css
@@ -48,7 +48,7 @@
 
 #ml-card {
     width: 42%;
-    min-width: 400px;
+    min-width: 500px;
 }
 
 .personal-info-h {
